Fixed scale problem but with regress in button visibility

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1,36 +1,48 @@
 .spacer1 {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .btn-file {
-    position: relative;
-    overflow: hidden;
+  position: relative;
+  overflow: hidden;
 }
 
 .btn-file input[type=file] {
-    margin-top: 8px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    min-width: 100%;
-    min-height: 100%;
-    font-size: 999px;
-    text-align: right;
-    filter: alpha(opacity=0);
-    opacity: 0;
-    outline: none;
-    background: white;
-    cursor: inherit;
-    display: block;
+  margin-top: 8px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
+  font-size: 999px;
+  text-align: right;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  outline: none;
+  background: white;
+  cursor: inherit;
+  display: block;
 }
+
+.btn.btn-learn {
+  background-color: #FF6600;
+  color: white;
+  border: 1px solid #d45500;
+}
+
+.btn.btn-learn:hover {
+  background-color: #ff7d1d;
+}
+
 .signup  {
   margin-top: 70px;
 }
 
 .signup .btn {
-  background-color: #FF6600;
+  color: white;
+  background-color: #00304a;
   opacity: 0.85;
-  border: 1px solid #ce5300;
+  border: 2px solid #001d2d;
 }
 
 .signup .btn:hover {
@@ -39,9 +51,8 @@
 
 .signup .btn.btn-large {
   margin-top: 4px !important;
-  margin-right: 25px !important;
-  background-color: #FF6600;
-  border: 1px solid #ce5300;
+  background-color: #00304a;
+  border: 1px solid #001d2d;
 }
 
 .signup .btn.btn-large:hover {
@@ -51,7 +62,7 @@
 .signup input[type=text],
 .signup input[type=password],
 .signup input[type=email] {
-  width: 93%;
+  width: 100%;
   height: 42px;
   padding-left: 15px;
   background: #fff;
